add 1st post date

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@ h1 {
 	color: #4d4dff
 }
 h2{
-	font-size: 18px;
+	font-size: 10px;
+	text-align:left;
 }
 
 </style>
 
 	</head>
 	<body>
-
+		<h2>July 14th, 2017</h2>
 		<h1>Going to the Library</h1>
+
 		<p>Hi there! Welcome to my first blog post.  Anyways, I’m going to jump right in with a set of questions that address the import java.util.Scanner.  Here are the questions:  “What happens when you included 'import java.util.Scanner;'” in your code?" "Where does the functionality come from?" Lastly, "What is the ‘java’ in the ‘java.util.Scanner?'" Okay, lets get started.</p>
 
 		 <p>When you type in import java.util.Scanner in the first line of code you are telling java that you want to use one of its optional libraries. In this case, we want to import the Scanner that will allow users to enter input into a program via keyboard or other input source.  There are a lot of optional libraries check out this link: <ahref="https://docs.oracle.com/javase/8/docs/api/index.htm"> </a>
