--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
 h1 {
 	text-align: center;
 	font-size: 20px;
-	color: #4d4dff
+	color: #4d4dff;
 }
 h2{
 	font-size: 10px;
 	text-align:left;
 }
-
+.container{width: 720px; margin: 0 auto;}
 </style>
 
 	</head>
 	<body>
+		<div class="container">
+
 		<h2>July 14th, 2017</h2>
 		<h1>Going to the Library</h1>
 		<hr>
@@ -41,7 +43,7 @@ h2{
 		 <p>Last question:  What is java in the ‘java.util.Scanner?  Okay, think of this package (java.util.Scanner) as a hierarchical set of files.  The java file holds the other classes inside of it.  So, inside the java file you will find the util class and inside the util class you will find the Scanner class!
 
      Until next time!</p>
-
+	 </div>
 	 </body>
 
 </html>
