--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ h2{
 		<p>Hi there! Welcome to my first blog post.  Anyways, I’m going to jump right in with a set of questions that address the import java.util.Scanner.  Here are the questions:  “What happens when you included 'import java.util.Scanner;'” in your code?" "Where does the functionality come from?" Lastly, "What is the ‘java’ in the ‘java.util.Scanner?'" Okay, lets get started.</p>
 
 		 <p>When you type in import java.util.Scanner in the first line of code you are telling java that you want to use one of its optional libraries. In this case, we want to import the Scanner that will allow users to enter input into a program via keyboard or other input source.  There are a lot of optional libraries check out this link:
-		<a href="https://docs.oracle.com/javase/8/docs/api/index.htm"> </a>
+		<a href="https://docs.oracle.com/javase/8/docs/api/index.htm">https://docs.oracle.com/javase/8/docs/api/index.htm</a>
 
      <p>The next question is: Where does the functionality come from?  It comes from the java library.  The core of the java program is small, but the external libraries let you customize your program to what you need.</p>
 		 <p>Last question:  What is java in the ‘java.util.Scanner?  Okay, think of this package (java.util.Scanner) as a hierarchical set of files.  The java file holds the other classes inside of it.  So, inside the java file you will find the util class and inside the util class you will find the Scanner class!</p>
