--- a/index.html
+++ b/index.html
@@ -31,6 +31,59 @@ h2{
 	<body>
 		<div class="container">
 
+		<h2>July 17th, 2017</h2>
+		<h1>To, Too, and Two</h1>
+		<hr>
+
+		<p>I don’t know if you have ever run into the various forms of equals in java, but today I’m going to do a quick break down of “=” vs “==” vs “. equals.” Confused yet?? Don’t they all mean EQUALS?? Well, yes but in different contexts. It’s kind of like two, to, and too!  I’m going tell you what each of these does and when you should use them.</p>
+
+		 <p>You may be asking yourself, “When do I use ‘=’?”  We would use the single set of equals (=)  to set a variable equal to some sort of value. Every time that variable is called the current stored value will be used in your program.  Here are some examples of defining variables:  j = 10, feet = 12.5, children = 6, name = Jodi, a = true.  This form “=” is also called an assignment operator because it assigns a value to the variable. Use this form of equals to set a variable equal to something.</p>
+
+     <p>Now, let’s look at the equal form “==”. This form is use to compare numbers to see if they are equivalent to each other. If the values are equivalent the program will return true. If the numbers are not equivalent to each other, then the program will return false.  These are Boolean operators, so true and false is all they will return to you. Here is an example: 4==4   evaluates to true and 3==4 evaluates to false.  You could use “==” in an “if “statement as a form of logic.  You can say if (x==y), then System.out.println(“You got it!”); . Oh, yeah, you use “==” when evaluating numbers, not strings which leads us to or last equals form “.equals.”</p>
+
+		 <p>Now, let’s look at the equal form “==”. This form is use to compare numbers to see if they are equivalent to each other. If the values are equivalent the program will return true. If the numbers are not equivalent to each other, then the program will return false.  These are Boolean operators, so true and false is all they will return to you. Here is an example: 4==4   evaluates to true and 3==4 evaluates to false.  You could use “==” in an “if “statement as a form of logic.  You can say if (x==y), then System.out.println(“You got it!”); . Oh, yeah, you use “==” when evaluating numbers, not strings which leads us to or last equals form “.equals.”
+
+</p>
+
+     <p></p>
+	 </div>
+	 </body>
+
+</html>
+
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title>
+			Jodi's Blog
+		</title>
+
+		<style>
+		body {
+	background-color: white;
+	font-family:verdana;
+	font-size: 14px;
+}
+
+
+
+h1 {
+	text-align: center;
+	font-size: 20px;
+	color: #4d4dff;
+}
+h2{
+	font-size: 10px;
+	text-align:left;
+}
+.container{width: 720px; margin: 0 auto;}
+</style>
+
+	</head>
+	<body>
+		<div class="container">
+
 		<h2>July 14th, 2017</h2>
 		<h1>Going to the Library</h1>
 		<hr>
