--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@ h2{
 
      <p>Now, let’s look at the equal form “==”. This form is use to compare numbers to see if they are equivalent to each other. If the values are equivalent the program will return true. If the numbers are not equivalent to each other, then the program will return false.  These are Boolean operators, so true and false is all they will return to you. Here is an example: 4==4   evaluates to true and 3==4 evaluates to false.  You could use “==” in an “if “statement as a form of logic.  You can say if (x==y), then System.out.println(“You got it!”); . Oh, yeah, you use “==” when evaluating numbers, not strings which leads us to or last equals form “.equals.”</p>
 
-		 <p>Now, let’s look at the equal form “==”. This form is use to compare numbers to see if they are equivalent to each other. If the values are equivalent the program will return true. If the numbers are not equivalent to each other, then the program will return false.  These are Boolean operators, so true and false is all they will return to you. Here is an example: 4==4   evaluates to true and 3==4 evaluates to false.  You could use “==” in an “if “statement as a form of logic.  You can say if (x==y), then System.out.println(“You got it!”); . Oh, yeah, you use “==” when evaluating numbers, not strings which leads us to or last equals form “.equals.”
-
-</p>
+		 <p>Lastly, we have the “.equal” form.   We use this method to evaluate strings to see if they are equivalent to each other just like “==” with numbers. This method will only evaluate to true or false, so it is a Boolean operator also. Here’s an example:  dog = dog , will evaluate to true but, dog = cat will evaluate to false. You could use this in an “if” statement also, to logic out a problem. </p>
 
      <p></p>
 	 </div>
