--- a/index.html
+++ b/index.html
@@ -31,6 +31,62 @@ h2{
 	<body>
 		<div class="container">
 
+		<h2>July 20th, 2017</h2>
+		<h1>Switching it up!</h1>
+		<hr>
+
+		<p>Hey there, today I’m going to be writing about the differences between “switch” and “if/else” statements.  These statements are used to make decisions in your programs.  Largely, how the program will perform and what you see on the screen as a user will have been ran through one of these statements. They both compare information important to your program, but they do it in different ways.</p>
+
+		 <p>Let’s look at some basic information about the switch statement. Switch works by calling the keyword Switch and placing a single variable into its parentheses. Then there are a bunch of cases that may have that variable assigned to it. If the computer can find a match for the variable within the cases, it will run the code associated with it. Some important things to remember with a switch statement is you want to end the case with a break.  If you do not the computer will just fall through to the next case, and the next case, and the next until it hits a break. This could cause an error in your program or if your crafty, you can use this as a feature in your program. A few other things to remember:  you can’t declare a variable in a switch statement and it’s a good idea to have a default set up in your cases in case the computer can’t find its variable match.  You can use a switch statement to figure out how many days are in the months of the year, for example. Or maybe you’re the owner of a large company and you have a list of employees, but only some of them can work on Fridays, you can use the switch statement to filter through to find your case of employee that work on Fridays. Switch statements work well if you have a lot of information to choose from. They are known to make your code neat and readable.</p>
+
+     <p>Ah..now for the if/else statement. First off, how does it work? The if/else statement says if my condition is true, run my body code. If my conditional statement is false run my else statement body code. With the if/else statement we use Boolean operators to evaluate the expression. Based on the outcome, a specific statement will be printed on the screen.  They look like this:
+
+     If  ( age < 18 ) {System.out.println( “You are not an adult”); }
+     else {     System.out.println( “ You are an adult “); }
+
+     If/else statement are used for about everything in computer decision making.
+     I hope this cleared things up a bit for you.</p>
+
+		 <p> </p>
+
+     <p></p>
+	 </div>
+	 </body>
+
+</html>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title>
+			Jodi's Blog
+		</title>
+
+		<style>
+		body {
+	background-color: white;
+	font-family:verdana;
+	font-size: 14px;
+}
+
+
+
+h1 {
+	text-align: center;
+	font-size: 20px;
+	color: #4d4dff;
+}
+h2{
+	font-size: 10px;
+	text-align:left;
+}
+.container{width: 720px; margin: 0 auto;}
+</style>
+
+	</head>
+	<body>
+		<div class="container">
+
 		<h2>July 17th, 2017</h2>
 		<h1>To, Too, and Two</h1>
 		<hr>
