--- a/index.html
+++ b/index.html
@@ -31,6 +31,56 @@ h2{
 	<body>
 		<div class="container">
 
+		<h2>July 24th, 2017</h2>
+		<h1>Math</h1>
+		<hr>
+
+		<p>A few days ago, I wrote to you a bit about casting a double to an int and I included Math.random() into my discussion. I thought you might want to know a little more about it.  I am going break it down piece by piece for you.  Let’s start with Math.  When you see Math and the first letter is capitalized you know that you’re are dealing with a class in Java.  Next, we see the “.random”, this is your method, and it’s return type is a random number between 0.0 (inclusive) and 1.0 (exclusive).  Lastly, a little bit more about the capital M, in Math.  It means that it is a static class in Java and you don’t need to create an object first to use it.</p>
+
+		 <p>Until next time!</p>
+
+     <p></p>
+
+		 <p> </p>
+
+     <p></p>
+	 </div>
+	 </body>
+
+</html>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title>
+			Jodi's Blog
+		</title>
+
+		<style>
+		body {
+	background-color: white;
+	font-family:verdana;
+	font-size: 14px;
+}
+
+
+
+h1 {
+	text-align: center;
+	font-size: 20px;
+	color: #4d4dff;
+}
+h2{
+	font-size: 10px;
+	text-align:left;
+}
+.container{width: 720px; margin: 0 auto;}
+</style>
+
+	</head>
+	<body>
+		<div class="container">
+
 		<h2>July 21th, 2017</h2>
 		<h1>Roll that Dice</h1>
 		<hr>
