--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h2{
 		<h1>Math</h1>
 		<hr>
 
-		<p>A few days ago, I wrote to you a bit about casting a double to an int and I included Math.random() into my discussion. I thought you might want to know a little more about it.  I am going break it down piece by piece for you.  Let’s start with Math.  When you see Math and the first letter is capitalized you know that you’re are dealing with a class in Java.  Next, we see the “.random”, this is your method, and it’s return type is a random number between 0.0 (inclusive) and 1.0 (exclusive).  Lastly, a little bit more about the capital M, in Math.  It means that it is a static class in Java and you don’t need to create an object first to use it.</p>
+		<p>A few days ago, I wrote a bit about casting a double to an int and I included Math.random() into my discussion. I thought you might want to know a little more about Math.random().  I am going to break it down piece by piece for you.  Let’s start with Math.  When you see Math and the first letter is capitalized you know that you’re are dealing with a class in Java.  Next, we see the “.random”, this is your method, and it’s return type is a random number between 0.0 (inclusive) and 1.0 (exclusive).  Lastly, a little bit more about the capital M, in Math.  It means that it is a static class in Java and you don’t need to create an object first to use it.</p>
 
 		 <p>Until next time!</p>
 
